<resources>
    <string name="app_name">Event 1</string>
    <string name="app_name2">xxxx</string>
    <string-array name="Spinner_Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="Spinner_Age">
        <item>Adult</item>
        <item>Child</item>
        <item>Teenager</item>
    </string-array>
    <string name="g_name">Name</string>
    <string name="g_gender">Gender</string>
    <string name="g_age">Age</string>
    <string name="g_contact">Contact</string>
    <string name="g_email">E-mail</string>
    <string name="g_invite">Invited</string>
    <string name="g_note">Note</string>
    <string name="g_btn_add">Add</string>
    <string name="g_btn_edit">Edit</string>
    <string name="g_btn_update">Update</string>
    <string name="g_btn_guest">Guest</string>
    <string name="s_completed_task">Completed Tasks</string>
    <string name="s_budget">Budget</string>
    <string name="s_date">Date and Time</string>
    <string name="s_location">Location</string>
    <string name="s_event">Event</string>
    <string name="s_btn_todolist">To Do List</string>
    <string name="g_toast_click">You just clicked the Guest button</string>
    <string name="g_toast_add">You just clicked the Add button to add a new guest</string>
    <string name="g_toast_add_successful">You just added a new guest record successfully</string>
    <string name="g_toast_edit">You just clicked Edit button to Update guest record </string>
    <string name="g_toast_update">Updated the guest details successfully</string>
    <string name="g_toast_delete">You just deleted the guest record</string>
    <string name="g_toast_views">You just clicked the View button to check guest record</string>
    <string name="g_toast_redirect">You just redirected to the previous page</string>
    <string name="e_home_name">Event Planner</string>
    <string name="g_home_name">Guest</string>
    <string name="g_home_name_extra">Guest 1</string>
    <string name="welcome">Welcome To The Event Planner</string>
    <string name="g_not_invite">Not Invited</string>

    <string name="eventName">Event Name</string>
    <string name="eventDate">Date</string>
    <string name="eventTime">Time</string>
    <string name="eventLocation">Location</string>
    <string name="eventTheme">Theme</string>
    <string name="evetnDress">Dress Code</string>
    <string name="photoes">Photographers</string>

    <string name="eventPhotos">Photographers</string>
    <string name="edit">You are going to edit your event</string>
    <string name="eventDes">Description</string>

<!--<<<<<<< Kasuni-->
    <string name="tName">Task</string>
    <string name="tTime">Time</string>
    <string name="tDescription">Description</string>
    <string name="toast_edit">View Your Task Here</string>


    //Anuththara's

    <string name="b_name">Name</string>
    <string name="add_price">Price</string>
    <string name="add_amount">Amount</string>
    <string name="b_note">Note</string>

    <string name="as_qty">Total  Quantity</string>
    <string name="as_price">Price</string>

    <string name="bd_details">Budget Details</string>
    <string name="bd_sl">Shopping List</string>
    <string name="add">Add</string>

    <string name="ebd_pa">Paid Amount</string>
    <string name="ebd_a">Amount</string>
    <string name="ebd_d">Delete</string>
    <string name="ebd_u">Update</string>

    <string name="adde_toast">New Budget Details added</string>
    <string name="adds_toast">New Shopping List Details added</string>
    <string name="bd_toast">Now You can add Budget Details</string>
    <string name="asl_toast">Add New Shopping List</string>
    <string name="ebd_dle_toast">Removed!</string>
    <string name="ebu_up_toast">Now Edit will available</string>


    <string name="click_back">Nothing Changed</string>

<!--=======-->
<!-->>>>>>> Integration-->
</resources>

