<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBudget">

    <TextView
        android:id="@+id/textView31"
        android:layout_width="359dp"
        android:layout_height="633dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:background="#3C819EAC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="110dp"
        android:layout_height="47dp"
        android:layout_marginTop="608dp"
        android:background="#3caac1"
        android:onClick="addData"
        android:text="@string/add"
        android:textColor="#E1040101"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="411dp"
        android:layout_height="61dp"
        android:background="#3caac1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="96dp"
        android:text="@string/b_name"
        android:textColor="#E1040101"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="200dp"
        android:text="@string/add_price"
        android:textColor="#E1040101"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="308dp"
        android:text="@string/add_amount"
        android:textColor="#E1040101"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="412dp"
        android:text="@string/b_note"
        android:textColor="#E1040101"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="55dp"
        android:layout_height="53dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="244dp"
        android:layout_height="46dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="15dp"
        android:text="Budget - Add Budget"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etABName"
        android:layout_width="276dp"
        android:layout_height="39dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="132dp"
        android:background="#7963DFEF"
        android:hint="Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etABPaidA"
        android:layout_width="186dp"
        android:layout_height="37dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="236dp"
        android:background="#7963DFEF"
        android:hint="Padi Amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etABAmount"
        android:layout_width="178dp"
        android:layout_height="37dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="305dp"
        android:background="#7963DFEF"
        android:hint="Amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etABNote"
        android:layout_width="292dp"
        android:layout_height="104dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="452dp"
        android:background="#7963DFEF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>