<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/etABPaidA"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddShoppingList">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etASNote"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="56dp"
        android:background="#1A63DFEF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/b_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.182" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/as_qty"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etASName" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/as_price"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etASPrice"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="56dp"
        android:background="#1A63DFEF"
        android:hint="Price"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etASQty" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etASName"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="56dp"
        android:background="#1A63DFEF"
        android:hint="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/b_note"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etASQty"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="56dp"
        android:background="#1A63DFEF"
        android:hint="Qty"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etASName" />

    <Button
        android:id="@+id/button1"
        android:layout_width="101dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="#3CAAC1"
        android:onClick="addSData"
        android:text="Add"
        android:textColor="#E1FDFDFD"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etASNote" />

</androidx.constraintlayout.widget.ConstraintLayout>