<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateBudget">

    <EditText
        android:id="@+id/idEditNote"
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="408dp"
        android:layout_marginEnd="56dp"
        android:background="#1A63DFEF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="316dp"
        android:text="Total Amount"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="112dp"
        android:text="@string/b_name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idEditAmount"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="308dp"
        android:layout_marginEnd="56dp"
        android:background="#1A63DFEF"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="252dp"
        android:text="@string/ebd_pa"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idEditPaidAmount"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="56dp"
        android:background="#1A63DFEF"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="368dp"
        android:text="@string/b_note"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ideditBudgetName"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="56dp"
        android:background="#1A63DFEF"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="101dp"
        android:layout_height="50dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#3CAAC1"
        android:text="Update"
        android:textColor="#E1FDFDFD"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEditNote" />

</androidx.constraintlayout.widget.ConstraintLayout>